crates/cobrust-dap/tests/snapshots/wave_5_dap_e2e__wave_5_data_bp_set_response.snap
---
source: crates/cobrust-dap/tests/wave_5_dap_e2e.rs
assertion_line: 362
expression: response.body
snapshot_kind: text
---
{
  "breakpoints": [
    {
      "id": 1,
      "message": "watchpoint: counter (write)",
      "verified": true
    },
    {
      "id": 2,
      "message": "watchpoint: buffer (read_write)",
      "verified": true
    }
  ]
}
